Refaktor: kalendář s hledáním, denní přehled a barevné dny
- odstraněno úvodní MainWindow, místo něj přibyl NameWindow (první spuštění)
  a WelcomeWindow (uvítací/loading obrazovka při dalších spuštěních)
- nový sdílený vizuální styl (Style.java) s teplou paletou,
  vlastní ikona kalendáře a fotoaparátu (Icons.java),
  hezčí písmo s fallbackem napříč platformami
- CalendarWindow:
  * hledání zápisů podle slov vlevo nahoře (input + Hledat)
  * kliknutím na měsíc/rok lze rovnou skočit na jiný měsíc
  * tlačítko Přidej zápis pro rychlé vytvoření zápisu pro dnešek
  * dny obarvené podle počtu zápisů, dny s obrázky mají ikonku
  * kliknutí na den otevře nové okno DenniZapisy
  * automatická obnova po přidání/smazání zápisu
- nové okno DenniZapisy zobrazí zápisy daného dne shora dolů
  od nejstaršího k nejnovějšímu s časem vzniku a obrázky inline
- EntryWindow:
  * datum v titulku okna místo interního nadpisu
  * šipky pro přepnutí na předchozí / následující den
  * obrázek se zobrazí jako náhled, ne jako cesta k souboru
  * po Uložit se okno jen zavře (a kalendář se obnoví)
- FileStorage používá unikátní názvy entry_<timestamp>.txt,
  takže více zápisů se stejným titulkem se nepřepisuje;
  přidána metoda search() pro fulltext napříč zápisy
- nové okno SearchResults s výpisem nalezených zápisů
- pom.xml: opravený mainClass, exec-maven-plugin místo
  nepoužívaného javafx-maven-plugin, odebrané JavaFX závislosti
- README aktualizováno, smazán nepoužitý hello-view.fxml